# dev-platform

./: README.md  TODO  current
cli/: commandlinefu-2014-07-29-14-29-22.txt
clients/: notes
clients/templates/: closure.js  notes  three-html.html  three-js.js  threejs.html
clients/tmp/: .socket.js.swp  bench.html  bench.js  depth-server.py  notes  scrap.html  socket.js
clients/tmp/data/: depth.json
clients/utils/: utils.js
pcl/: notes
pcl/config/: notes
pcl/data/: notes
pcl/features/: notes
pcl/features/extract_indices/: notes
pcl/features/pfh_descriptors/: notes
pcl/features/plane_model_segmentation/: notes
pcl/features/surface_normals/: notes
pcl/features/vfh_signature/: notes
pcl/io/: readme
pcl/io/mobile_stream_app/: notes
pcl/io/pcd_pcl/: notes
pcl/io/pcl_pcd/: CMakeLists.txt  notes  pcl_pcd.cpp
pcl/io/pcl_rangeimg/: .OKPCL.cpp.swp  CMakeLists.txt  notes
pcl/io/rangeimg_png/: OKPCL.cpp  notes  pcl.rangetopng.cpp
pcl/io/tmp/point_cloud_compression/: .scrap.cpp.swp  CMakeLists.txt  scrap.cpp
pcl/io/tmp/point_cloud_compression/bk/: point_cloud_compression.cpp
pcl/io/tmp/range_image_creation/: .CMakeLists.txt.swp  .range_image_creation.cpp.swo  .range_image_creation.cpp.swp  range_image_creation.cpp
pcl/io/tmp/socket/: .index.html.swn  .index.html.swo  .index.html.swp  index.html  socket.js
pcl/ops/: notes
pcl/training/: notes
pcl/training/implicit_shapemodel_app/: notes
pcl/training/vfh_recognition/: notes
servers/pysocket/: pysocket.py  readme.md
servers/tmp/: notes
servers/workers/png/: readme.md
